# streamlit-starter

./: .env-example  .gitignore  README.md  dockerfile  mkdocs.yaml  requirements.txt  streamlit_app.py
.github/workflows/: deploy_example.yaml  pages_example.yaml  test_example.yaml
app/: README.md  pyproject.toml
app/src/streamlit_lib/: __init__.py
app/src/streamlit_lib/backend/: example.py
app/src/streamlit_lib/ui/: example_component.py  streamlit_main.py
app/tests/: test_env.py
docs/: index.md
